feat: update landing page

--- a/popup/landing.html
+++ b/popup/landing.html
@@ -8,8 +8,7 @@
 	</head>
 
 	<body>
-		<div class="l-box">
-			<button class="pure-button pure-button-primary">Start Session</button>
-		</div>
+		<h1>Chartarrr!</h1>
+		<button class="button-small pure-button pure-button-primary">Start New Session</button>
 	</body>
 </html>
