feat: add new session logic
- Add start session form with estimated duration field which will be
  used for counting down in the badge text, and used in the markdown
  export at the end.
- Add background script which listens for the session alarm. This will
  increment the duration of the session, and decrease the badge text
  each minute.
- When the popup is displayed the function displayPopup() will check if
  an active session is in progress to determine which view the user
  should have in the popup (between start, and active).

--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,22 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="../css/pure-min.css">
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="css/pure-min.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
 		<h1>Chartarrr!</h1>
-		<button class="button-small pure-button pure-button-primary">Start New Session</button>
+		<div id="start">
+			<form class="pure-form pure-form-stacked">
+				<label for="duration">Length (minutes):</label>
+				<input type="number" class="pure-input-1" id="duration" min="1" required="" />
+				<button type="submit" class="pure-button pure-button-primary" id="button-new-session">New Session</button>
+			</form>
+		</div>
+		<div id="active">
+			<p>Session is active</p>
+		</div>
+		<script src="js/popup.js"></script>
 	</body>
 </html>
