feat: add active view design

--- a/popup.html
+++ b/popup.html
@@ -5,19 +5,53 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/pure-min.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/fontawesome.min.css">
+		<link rel="stylesheet" href="css/solid.min.css">
 	</head>
 
 	<body>
 		<h1>Chartarrr!</h1>
 		<div id="start">
-			<form class="pure-form pure-form-stacked">
+			<div class="pure-form pure-form-stacked">
 				<label for="duration">Length (minutes):</label>
 				<input type="number" class="pure-input-1" id="duration" min="1" required="" />
-				<button type="submit" class="pure-button pure-button-primary" id="button-new-session">New Session</button>
-			</form>
+				<button class="pure-button pure-button-primary" id="button-start">New Session</button>
+			</div>
 		</div>
 		<div id="active">
-			<p>Session is active</p>
+			<div class="pure-form pure-form-stacked">
+				<div class="comment-box">
+					<textarea class="pure-input-1" id="comment" placeholder="New comment..."></textarea>
+					<button class="pure-button button-small" title="Take screenshot of active tab.">
+						<i class="fa-solid fa-camera"></i>
+					</button>
+				</div>
+				<div class="attachment-message">
+					<span id="attachment-delete" title="Delete attached image."><i class="fa-solid fa-trash"></i></span>
+					<span>Image of active tab attached</span>
+				</div>
+				<div role="group" aria-label="Comment type">
+					<button class="pure-button" id="button-note">
+						<i class="fa-solid fa-comment"></i> Note
+					</button>
+					<button class="pure-button" id="button-bug">
+						<i class="fa-solid fa-bug"></i> Bug
+					</button>
+					<button class="pure-button" id="button-clarification">
+						<i class="fa-solid fa-question"></i> Clarification
+					</button>
+				</div>
+			</div>
+			<hr>
+			<div role="group" aria-label="Session actions">
+				<button class="pure-button" id="button-end">View Details</button>
+				<button class="pure-button" id="button-end">End Session</button>
+				<!--
+				<button class="pure-button" id="button-end" aria-label="Settings">
+					<i class="fa-solid fa-gear"></i>
+				</button>
+				-->
+			</div>
 		</div>
 		<script src="js/popup.js"></script>
 	</body>
