--- a/popup.html
+++ b/popup.html
@@ -53,6 +53,7 @@
 				-->
 			</div>
 		</div>
+		<script src="js/browser-polyfill.min.js"></script>
 		<script src="js/popup.js"></script>
 	</body>
 </html>
