--- a/preview-attachment.html
+++ b/preview-attachment.html
@@ -18,15 +18,18 @@
 
 	<body>
 		<h1>Attachment Preview</h1>
-
 		<div class="container" role="group" aria-label="Preview actions">
 			<button id="button-close">Close Preview</button>
 		</div>
 
 		<hr>
 
-		<div class="container">
+		<div class="container" id="image">
 			<img src="" id="attachment">
+		</div>
+
+		<div class="container" id="error">
+			<h1>No Attachment Found</h1>
 		</div>
 
 		<!-- Scripts -->
