fix: charter typo on view session page

--- a/view-session.html
+++ b/view-session.html
@@ -21,8 +21,8 @@
 
 		<h2>General</h2>
 		<div class="container">
-			<p>Estimated Chartar duration: <span id="estimated-duration">??</span> minutes</p>
-			<p>Current Chartar duration: <span id="duration">??</span> minutes</p>
+			<p>Estimated Charter duration: <span id="estimated-duration">??</span> minutes</p>
+			<p>Current Charter duration: <span id="duration">??</span> minutes</p>
 		</div>
 
 		<h2>Comments</h2>
