refactor: deduplicate code into helper methods
- Add helper methods for common reused code.
- Remove some unneeded declarations.

--- a/popup.html
+++ b/popup.html
@@ -81,6 +81,7 @@
 
 		<!-- Scripts -->
 		<script src="js/browser-polyfill.min.js"></script>
+		<script src="js/helpers.js"></script>
 		<script src="js/popup.js"></script>
 	</body>
 </html>
