--- a/preview-attachment.html
+++ b/preview-attachment.html
@@ -34,6 +34,7 @@
 
 		<!-- Scripts -->
 		<script src="js/browser-polyfill.min.js"></script>
+		<script src="js/helpers.js"></script>
 		<script src="js/preview-attachment.js"></script>
 	</body>
 </html>
