--- a/view-session.html
+++ b/view-session.html
@@ -32,6 +32,7 @@
 
 		<!-- Scripts -->
 		<script src="js/browser-polyfill.min.js"></script>
+		<script src="js/helpers.js"></script>
 		<script src="js/view-session.js"></script>
 	</body>
 </html>
