feat: add end session page display with details
- Add end session page which displays all information about the session,
  with additional fields to fill out which will be included in the
  markdown export.
- Refactor comment element creation inside of view-session.js to a
  helper function for the end session page to also use.
- Store the start date of a session so it can be used in the final
  charter details.
- Update view session to display the start date time of the session.

--- a/src/preview-attachment.html
+++ b/src/preview-attachment.html
@@ -28,7 +28,7 @@
 			<img src="" id="attachment">
 		</div>
 
-		<div class="container" id="error">
+		<div class="container" id="no-attachment">
 			<h1>No Attachment Found</h1>
 		</div>
 
