--- a/src/view-session.html
+++ b/src/view-session.html
@@ -13,19 +13,20 @@
 		<link rel="stylesheet" href="css/solid.min.css">
 
 		<!-- Ours -->
-		<link rel="stylesheet" href="css/view-session.css">
+		<link rel="stylesheet" href="css/session.css">
 	</head>
 
 	<body>
-		<h1>Session Details</h1>
+		<h1>Session Details Overview</h1>
 
 		<h2>General</h2>
 		<div class="container">
+			<p>Started: <span id="start-date">??</span></p>
 			<p>Estimated Charter duration: <span id="estimated-duration">??</span> minutes</p>
 			<p>Current Charter duration: <span id="duration">??</span> minutes</p>
 		</div>
 
-		<h2>Comments</h2>
+		<h2>Comments (<span id="comment-count">0</span>)</h2>
 		<div class="container" id="comments">
 			<!-- JS creates these elements -->
 		</div>
