feat: export session downloads in md, and json
- Refactor export session flow to export both the markdown, and json
  files together.
- Add preview markdown, and preview json actions so that if the user
  doesn't wish for a full export then they can opt for just the session
  notes.

--- a/src/end-session.html
+++ b/src/end-session.html
@@ -65,18 +65,18 @@
 		</div>
 		
 		<h2>Actions</h2>
-		<div class="container" role="group" aria-label="Session actions">
-			<div class="container">
-				<p>The following actions below can be used to export this session's details, and also for ending the active session.</p>
-				<button id="button-export-md">Export to Markdown</button>
-				<button id="button-export-json">Export to JSON</button>
+		<div class="container">
+			<p>The following actions below can be used to export this session's details, and also for ending the active session.</p>
+			<div class="container" role="group" aria-label="Session actions">
+				<button id="button-export">Export Session</button>
+				<button id="button-preview-md">Preview Markdown</button>
+				<button id="button-preview-json">Preview JSON</button>
 				<button id="button-end">End Session</button>
+				<div id="preview">
+					<pre id="preview-content"></pre>
+				</div>
 			</div>
-			<div class="container" id="export">
-				<p>Export:</p>
-				<pre id="export-content">Test</pre>
-				<button id="button-export-download">Download with Images</button>
-			</div>
+			
 		</div>
 
 		<!-- Scripts -->
