feat: add end session
- Add end session logic for handling of ending the active session to
  create a new one.
- Update the view session page to display an appropriate warning message
  for if a user navigates to the page while there is no active session.

--- a/src/end-session.html
+++ b/src/end-session.html
@@ -72,6 +72,7 @@
 				<button id="button-preview-md">Preview Markdown</button>
 				<button id="button-preview-json">Preview JSON</button>
 				<button id="button-end">End Session</button>
+				<p class="warning" id="warning-end-session">Please make sure you've exported your session if you wish to keep it's details. Ending the session will reset all details logged, and allow for a new session to be started. Confirm ending the session by clicking the button again.</p>
 				<div id="preview">
 					<pre id="preview-content"></pre>
 				</div>
