--- a/src/view-session.html
+++ b/src/view-session.html
@@ -19,16 +19,22 @@
 	<body>
 		<h1>Session Details Overview</h1>
 
-		<h2>General</h2>
-		<div class="container">
-			<p>Started: <span id="start-date">??</span></p>
-			<p>Estimated Charter duration: <span id="estimated-duration">??</span> minutes</p>
-			<p>Current Charter duration: <span id="duration">??</span> minutes</p>
+		<div class="container" id="session">
+			<h2>General</h2>
+			<div class="container">
+				<p>Started: <span id="start-date">??</span></p>
+				<p>Estimated Charter duration: <span id="estimated-duration">??</span> minutes</p>
+				<p>Current Charter duration: <span id="duration">??</span> minutes</p>
+			</div>
+
+			<h2>Comments (<span id="comment-count">0</span>)</h2>
+			<div class="container" id="comments">
+				<!-- JS creates these elements -->
+			</div>
 		</div>
 
-		<h2>Comments (<span id="comment-count">0</span>)</h2>
-		<div class="container" id="comments">
-			<!-- JS creates these elements -->
+		<div class="container" id="no-session">
+			<h2>No Session is Active</h1>
 		</div>
 
 		<!-- Scripts -->
