fix: keep duration as a integer on end session
- Exporting or previewing the session on the end session page would
  overwrite the stored duration from an integer to a string. Leaving it
  like this would make it more difficult in the future to implement a
  import session feature that was backwards compatible with older
  exports.

--- a/src/end-session.html
+++ b/src/end-session.html
@@ -47,12 +47,12 @@
 				<textarea id="environment" rows="3">Web, QA, x.x.x</textarea>
 			</p>
 			<p>
-				<label for="estimated-duration">Estimated Duration:</label>
-				<input type="text" id="estimated-duration" />
+				<label for="estimated-duration">Estimated Duration (minutes):</label>
+				<input type="number" id="estimated-duration" min="0" />
 			</p>
 			<p>
-				<label for="actual-duration">Actual Duration:</label>
-				<input type="text" id="actual-duration" />
+				<label for="actual-duration">Actual Duration (minutes):</label>
+				<input type="number" id="actual-duration" min="0" />
 			</p>
 			<p>
 				<label for="start-date">Started:</label>
