refactor: replace minified files with non minified
- Replaced all minified files across the extension with non minified
  counterparts. This will assist in having an easier time with the
  review process on webstores for publishing, and updating.

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,11 +6,11 @@
 
 		<!-- Minimal classless stylesheet -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/yorha.min.css">
+		<link rel="stylesheet" href="css/yorha.css">
 
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/solid.min.css">
+		<link rel="stylesheet" href="css/fontawesome.css">
+		<link rel="stylesheet" href="css/solid.css">
 
 		<!-- Ours -->
 		<link rel="stylesheet" href="css/popup.css">
@@ -80,7 +80,7 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="js/browser-polyfill.min.js"></script>
+		<script src="js/browser-polyfill.js"></script>
 		<script src="js/helpers.js"></script>
 		<script src="js/popup.js"></script>
 	</body>
