--- a/src/end-session.html
+++ b/src/end-session.html
@@ -6,11 +6,11 @@
 
 		<!-- Minimal classless stylesheet -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/yorha.min.css">
+		<link rel="stylesheet" href="css/yorha.css">
 
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/solid.min.css">
+		<link rel="stylesheet" href="css/fontawesome.css">
+		<link rel="stylesheet" href="css/solid.css">
 
 		<!-- Ours -->
 		<link rel="stylesheet" href="css/session.css">
@@ -81,10 +81,10 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="js/browser-polyfill.min.js"></script>
+		<script src="js/browser-polyfill.js"></script>
 		<script src="js/helpers.js"></script>
-		<script src="js/jszip.min.js"></script>
-		<script src="js/FileSaver.min.js"></script>
+		<script src="js/jszip.js"></script>
+		<script src="js/FileSaver.js"></script>
 		<script src="js/end-session.js"></script>
 	</body>
 </html>
