--- a/src/preview-attachment.html
+++ b/src/preview-attachment.html
@@ -6,11 +6,11 @@
 
 		<!-- Minimal classless stylesheet -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/yorha.min.css">
+		<link rel="stylesheet" href="css/yorha.css">
 
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/solid.min.css">
+		<link rel="stylesheet" href="css/fontawesome.css">
+		<link rel="stylesheet" href="css/solid.css">
 
 		<!-- Ours -->
 		<link rel="stylesheet" href="css/preview-attachment.css">
@@ -33,7 +33,7 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="js/browser-polyfill.min.js"></script>
+		<script src="js/browser-polyfill.js"></script>
 		<script src="js/helpers.js"></script>
 		<script src="js/preview-attachment.js"></script>
 	</body>
