--- a/src/preview-attachment.html
+++ b/src/preview-attachment.html
@@ -1,40 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
-	<head>
-		<meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-		<!-- Minimal classless stylesheet -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/yorha.css">
+    <!-- Minimal classless stylesheet -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/yorha.css" />
 
-		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/fontawesome.css">
-		<link rel="stylesheet" href="css/solid.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="css/fontawesome.css" />
+    <link rel="stylesheet" href="css/solid.css" />
 
-		<!-- Ours -->
-		<link rel="stylesheet" href="css/preview-attachment.css">
-	</head>
+    <!-- Ours -->
+    <link rel="stylesheet" href="css/preview-attachment.css" />
+  </head>
 
-	<body>
-		<h1>Attachment Preview</h1>
-		<div class="container" role="group" aria-label="Preview actions">
-			<button id="button-close">Close Preview</button>
-		</div>
+  <body>
+    <h1>Attachment Preview</h1>
+    <div class="container" role="group" aria-label="Preview actions">
+      <button id="button-close">Close Preview</button>
+    </div>
 
-		<hr>
+    <hr />
 
-		<div class="container" id="image">
-			<img src="" id="attachment">
-		</div>
+    <div class="container" id="image">
+      <img src="" id="attachment" />
+    </div>
 
-		<div class="container" id="no-attachment">
-			<h1>No Attachment Found</h1>
-		</div>
+    <div class="container" id="no-attachment">
+      <h1>No Attachment Found</h1>
+    </div>
 
-		<!-- Scripts -->
-		<script src="js/browser-polyfill.js"></script>
-		<script src="js/helpers.js"></script>
-		<script src="js/preview-attachment.js"></script>
-	</body>
+    <!-- Scripts -->
+    <script src="js/browser-polyfill.js"></script>
+    <script src="js/helpers.js"></script>
+    <script src="js/preview-attachment.js"></script>
+  </body>
 </html>
