--- a/src/view-session.html
+++ b/src/view-session.html
@@ -1,45 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
-	<head>
-		<meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-		<!-- Minimal classless stylesheet -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/yorha.css">
+    <!-- Minimal classless stylesheet -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/yorha.css" />
 
-		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/fontawesome.css">
-		<link rel="stylesheet" href="css/solid.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="css/fontawesome.css" />
+    <link rel="stylesheet" href="css/solid.css" />
 
-		<!-- Ours -->
-		<link rel="stylesheet" href="css/session.css">
-	</head>
+    <!-- Ours -->
+    <link rel="stylesheet" href="css/session.css" />
+  </head>
 
-	<body>
-		<h1>Session Details Overview</h1>
+  <body>
+    <h1>Session Details Overview</h1>
 
-		<div class="container" id="session">
-			<h2>General</h2>
-			<div class="container">
-				<p>Started: <span id="start-date">??</span></p>
-				<p>Estimated Charter duration: <span id="estimated-duration">??</span> minutes</p>
-				<p>Current Charter duration: <span id="duration">??</span> minutes</p>
-			</div>
+    <div class="container" id="session">
+      <h2>General</h2>
+      <div class="container">
+        <p>Started: <span id="start-date">??</span></p>
+        <p>
+          Estimated Charter duration:
+          <span id="estimated-duration">??</span> minutes
+        </p>
+        <p>Current Charter duration: <span id="duration">??</span> minutes</p>
+      </div>
 
-			<h2>Comments (<span id="comment-count">0</span>)</h2>
-			<div class="container" id="comments">
-				<!-- JS creates these elements -->
-			</div>
-		</div>
+      <h2>Comments (<span id="comment-count">0</span>)</h2>
+      <div class="container" id="comments">
+        <!-- JS creates these elements -->
+      </div>
+    </div>
 
-		<div class="container" id="no-session">
-			<h2>No Session is Active</h1>
-		</div>
+    <div class="container" id="no-session">
+      <h2>No Session is Active</h2>
+    </div>
 
-		<!-- Scripts -->
-		<script src="js/browser-polyfill.js"></script>
-		<script src="js/helpers.js"></script>
-		<script src="js/view-session.js"></script>
-	</body>
+    <!-- Scripts -->
+    <script src="js/browser-polyfill.js"></script>
+    <script src="js/helpers.js"></script>
+    <script src="js/view-session.js"></script>
+  </body>
 </html>
