update js usage to es modules

--- a/src/end-session.html
+++ b/src/end-session.html
@@ -92,9 +92,8 @@
 
     <!-- Scripts -->
     <script src="js/browser-polyfill.js"></script>
-    <script src="js/helpers.js"></script>
     <script src="js/jszip.js"></script>
     <script src="js/FileSaver.js"></script>
-    <script src="js/end-session.js"></script>
+    <script type="module" src="js/end-session.js"></script>
   </body>
 </html>
