--- a/src/preview-attachment.html
+++ b/src/preview-attachment.html
@@ -34,7 +34,6 @@
 
     <!-- Scripts -->
     <script src="js/browser-polyfill.js"></script>
-    <script src="js/helpers.js"></script>
-    <script src="js/preview-attachment.js"></script>
+    <script type="module" src="js/preview-attachment.js"></script>
   </body>
 </html>
