--- a/src/view-session.html
+++ b/src/view-session.html
@@ -42,7 +42,6 @@
 
     <!-- Scripts -->
     <script src="js/browser-polyfill.js"></script>
-    <script src="js/helpers.js"></script>
-    <script src="js/view-session.js"></script>
+    <script type="module" src="js/view-session.js"></script>
   </body>
 </html>
