--- a/src/popup.html
+++ b/src/popup.html
@@ -89,7 +89,6 @@
 
     <!-- Scripts -->
     <script src="js/browser-polyfill.js"></script>
-    <script src="js/helpers.js"></script>
-    <script src="js/popup.js"></script>
+    <script type="module" src="js/popup.js"></script>
   </body>
 </html>
